# VidGrab-desktop

./: .gitignore  README.md  package-lock.json  package.json
desktop/: index.html  package.json  tsconfig.json  vite.config.ts
desktop/src/: App.vue  style.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: lib.rs  main.rs
desktop/src/api/: cloudClient.ts  hostBridge.ts  localResolverClient.ts
desktop/src/components/: AIAssistant.vue  AuthPanel.vue  DownloadForm.vue  FormatSelector.vue  MindMapTree.vue  ProgressBar.vue  ResolverHostPanel.vue  VideoInfo.vue
desktop/src/composables/: useAuth.ts  useDownload.ts  useMembership.ts  useResolverHost.ts  useVideoAI.ts
desktop/src/types/: index.ts
docs/: ARCHITECTURE.md  DESKTOP-MIGRATION-PLAN.md  NEXT-STEPS.md  RELEASE-0.1.1.md  TAURI-HOST.md
resolver/: README.md  requirements.txt  server.py
resolver/tests/: test_server.py
scripts/: dev-host.mjs
shared/: contracts.ts
