[package]
name = "vidgrab_desktop"
version = "0.1.0"
description = "VidGrab desktop host runtime"
authors = ["VidGrab"]
edition = "2021"

[lib]
name = "vidgrab_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
tauri = { version = "2.0.0", features = [] }
tauri-plugin-http = "2.0.0"
